--- a/TelecommunicationsBigData-FrontEnd/index.html
+++ b/TelecommunicationsBigData-FrontEnd/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+    <!-- 百度地图的资源 -->
+    <script type="text/javascript" src="https://api.map.baidu.com/api?type=webgl&v=1.0&ak=UA2GyrYSmnMAEZEDwU0MDUJBgH0hiHPO"></script>
+    <!-- 引入 ECharts -->
+    <script src="dist/echarts.min.js"></script>
+    <!-- 引入百度地图扩展 -->
+    <script src="dist/extension/bmap.min.js"></script>
+    
     <title>大数据电信</title>
   </head>
   <body>
