地图部分尝试

--- a/TelecommunicationsBigData-FrontEnd/index.html
+++ b/TelecommunicationsBigData-FrontEnd/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <!-- 百度地图的资源 -->
-    <script type="text/javascript" src="https://api.map.baidu.com/api?type=webgl&v=1.0&ak=UA2GyrYSmnMAEZEDwU0MDUJBgH0hiHPO"></script>
+    <script type="text/javascript" src="https://api.map.baidu.com/api?v=3.0&ak=UA2GyrYSmnMAEZEDwU0MDUJBgH0hiHPO"></script>
     <!-- 引入 ECharts -->
     <script src="dist/echarts.min.js"></script>
     <!-- 引入百度地图扩展 -->
